# ssz-metric-pure

./: .gitignore  01_MATHEMATICAL_FOUNDATIONS.md  02_PHYSICS_CONCEPTS.md  03_SCRIPT_ARCHITECTURE.md  04_FINDINGS_UNIFIED_RESULTS.md  05_FINDINGS_SSZ_METRIC_PURE.md  06_FINDINGS_G79_CYGNUS_TESTS.md  APPENDIX_A_PROOF_PACK.tex  CAUTION_RESOLUTION_EXPLANATION.md  CHANGELOG.md  CHANGELOG_2PN_CALIBRATION.md  CITATION.cff  COMPARISON_AND_NEXT_STEPS.md  COMPARISON_README.md  COMPLETE_TENSOR_PACKAGE_README.md  FAHRPLAN_50_PHASEN.md  FINAL_COMPARISON_AND_INTERPRETATION.py  FINAL_PROJECT_REPORT.md  FINAL_SESSION_SUMMARY.md  FINAL_SUMMARY_AND_REPORT.py  FINAL_VERIFICATION_SUMMARY.md  IMPLEMENTATION_PLAN_100_PERCENT.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LATEX_DOCUMENTATION.tex  LICENSE  LINO_SPEC_VERIFICATION.md  MASTER_README.md  PHI_SPIRAL_IMPLEMENTATION_COMPLETE.md  PIPELINE_README.md  PROJECT_STATUS.md  PUSH_INSTRUCTIONS.md  QUICKSTART.md  README.md  README_COMPLETE.md  ROADMAP_TO_100_PERCENT.md  SSZ_EINSTEIN_RICCI_CURVATURE.tex  SSZ_METRIC_TENSOR_COMPLETE.tex  SSZ_VALIDATION_SUMMARY_V2.md  SYMBOLIC_COMPUTATION_GUIDE.md  (+18 more)
agent_out/PROVENANCE/: PROVENANCE_LOG.md  SSZ_FULL_METRIC_MANIFEST.txt  SSZ_METRIC_FINAL_MANIFEST.txt  STEP_LOG.md
agent_out/REPORTS/: CONSTRUCTION_STATUS.md
docs/: SPECIFICATION.md
examples/: README_PHI_SPIRAL.md  basic_usage.py  demo_phi_spiral.py
reports/: CALIBRATION_2PN_COMPLETE_OUTPUT.txt  CALIBRATION_2PN_RESULTS.txt  FINAL_COMPARISON.txt  FINAL_COMPLETE_REPORT.md  FINAL_VALIDATION_COMPLETE.md  GEODESICS_VALIDATION_OUTPUT.txt  SSZ_CERTIFICATE_EARTH.txt  SSZ_CERTIFICATE_SUN.txt  SSZ_COMPLETE_SUMMARY.md  SSZ_QUICK_REFERENCE.md  SSZ_VALIDATION_REPORT.md  SSZ_VALIDATION_REPORT.tex  SSZ_VS_GR_COMPLETE_COMPARISON.txt  ssz_validation_certificate.json
src/: sszviz.py
src/ssz_core/: __init__.py  constants.py  metric.py  segment_density.py
src/ssz_metric_pure/: __init__.py  calibration_2pn.py  einstein_ricci_4d.py  geodesics.py  geodesics_phi_spiral.py  metric_kerr_ssz_kerr_by_ki.py  metric_phi_spiral_ssz_by_human.py  metric_static.py  metric_tensor_4d.py  params.py  segmentation.py  ssz_calibrated.py  ssz_symbolic_fast.py  ssz_symbolic_pack.py  ssz_symbolic_sparse.py  ssz_validator.py  ssz_vs_gr_comparison.py  symbolic_tensor_derivation.py  tensors.py
src/ssz_viz/: __init__.py  plot_comparison.py  plot_curvature.py  plot_metric_a.py  plot_time_dilation.py
tests/: __init__.py  test_metric_OLD.py.bak  test_metric_kerr.py  test_metric_static.py  test_segment_density_OLD.py.bak  test_sparse_validators.py  test_validation_ssz_calibrated.py
