[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssz-metric-pure"
version = "0.1.0"
description = "Pure Segmented Spacetime (SSZ) metric library - 100% pure implementation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "ANTI-CAPITALIST SOFTWARE LICENSE v1.4"}
authors = [
    {name = "Carmen Wrede"},
    {name = "Lino Casu"}
]
keywords = ["physics", "relativity", "black-holes", "spacetime", "golden-ratio", "ssz", "kerr", "geodesics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "sympy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "mypy>=1.5.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
]
viz = [
    "matplotlib>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/error-wtf/ssz-metric-pure"
Repository = "https://github.com/error-wtf/ssz-metric-pure"
Documentation = "https://github.com/error-wtf/ssz-metric-pure/blob/main/docs"
"Bug Tracker" = "https://github.com/error-wtf/ssz-metric-pure/issues"

[project.scripts]
ssz-kerr-summary = "ssz_metric_pure.cli:main"

[tool.setuptools]
packages = ["ssz_metric_pure"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short -s"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
